// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post a reply: open reply form 1`] = `
<div
  aria-labelledby="comment-comment-0-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-0"
  id="comment-comment-0"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-0-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
            >
              remove
            </i>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-0"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-0"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                />
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Joining Too",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                      >
                        thumb_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={true}
                    className="BaseButton-root Button-base Button-flat Button-active Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-0"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                      >
                        reply
                      </i>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-0"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                        >
                          share
                        </i>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-0"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Report comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                    data-testid="comment-report-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="coral coral-createReplyComment"
      >
        <form
          autoComplete="off"
          id="comments-postCommentForm-form"
          onSubmit={[Function]}
        >
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-full"
          >
            <div>
              <label
                className="AriaInfo-root"
                htmlFor="comments-replyCommentForm-rte-comment-0"
              >
                Write a reply
              </label>
              <div
                className="Box-root Flex-root ReplyingTo-root coral coral-createReplyComment-replyTo Flex-flex Flex-alignCenter"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon"
                >
                  reply
                </i>
                <span>
                   
                </span>
                <span
                  className="ReplyingTo-text coral coral-createReplyComment-replyToText"
                >
                  Replying to 
                  <span
                    className="ReplyingTo-username coral coral-createReplyComment-replyToUsername"
                  >
                    Markus
                  </span>
                </span>
              </div>
              <div
                className="CommentForm-commentFormBox CommentForm-noTopBorder coral coral-commentForm"
              >
                <div
                  role="none"
                >
                  <div
                    className="coral coral-rte"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                    >
                      <div
                        aria-placeholder="Write a reply"
                        className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                        id="comments-replyCommentForm-rte-comment-0"
                      />
                      <div
                        aria-hidden="true"
                        className="RTE.module-placeholder coral coral-rte-placeholder RTE-placeholder"
                      >
                        Write a reply
                      </div>
                    </div>
                    <div
                      className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                    >
                      <button
                        aria-pressed={false}
                        className="BaseButton-root RTEButton-button"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        title="Bold"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-md coral coral-icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        aria-pressed={false}
                        className="BaseButton-root RTEButton-button"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        title="Italic"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-md coral coral-icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        aria-pressed={false}
                        className="BaseButton-root RTEButton-button"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        title="Blockquote"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-md coral coral-icon"
                        >
                          format_quote
                        </i>
                      </button>
                      <button
                        aria-pressed={false}
                        className="BaseButton-root RTEButton-button"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        title="Bulleted List"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-md coral coral-icon"
                        >
                          format_list_bulleted
                        </i>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
            >
              <button
                className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-createReplyComment-cancel"
                data-variant="outlined"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-createReplyComment-submit"
                data-variant="filled"
                disabled={true}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`post a reply: optimistic response 1`] = `
<div
  aria-live="off"
  className="Box-root HorizontalGutter-root ReplyList-withPadding HorizontalGutter-full"
  data-testid="commentReplyList-comment-0"
  id="coral-comments-replyList-log--comment-0"
  role="log"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      aria-labelledby="comment-uuid-0-label"
      className="CommentContainer-root coral coral-comment coral coral-reacted-0"
      data-key-stop={true}
      data-testid="comment-uuid-0"
      id="comment-uuid-0"
      onFocus={[Function]}
      role="article"
      tabIndex={-1}
    >
      <div
        className="Hidden-root"
        id="comment-uuid-0-label"
      >
        <span>
          Thread Level 1:
        </span>
         
        <span>
          Reply from Markus 
          <time
            className="RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </span>
      </div>
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-full"
      >
        <div
          className="IndentedComment-blur coral coral-comment-collapse-toggle-indent Indent-root"
        >
          <div
            className="CommentContainer-indentedCommentRoot CommentContainer-indented Indent-level1 coral coral-indent coral-indent-1 Indent-open Indent-openPadded"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
            >
              <button
                aria-label="Hide comment by Markus and its replies"
                className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
                >
                  remove
                </i>
              </button>
              <div
                className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
              >
                <div
                  className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
                  >
                    <div
                      className="Comment-username"
                    >
                      <div
                        className="Popover-root"
                      >
                        <button
                          aria-controls="username-popover-uuid-0"
                          aria-label="User Markus"
                          className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          type="button"
                        >
                          <span
                            className="Username-root"
                          >
                            Markus
                          </span>
                        </button>
                        <div
                          aria-hidden={true}
                          aria-label="A popover with more user information"
                          id="username-popover-uuid-0"
                          role="dialog"
                        />
                      </div>
                    </div>
                    <div
                      className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                    >
                      <button
                        className="BaseButton-root Timestamp-root"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <time
                          className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                          dateTime="2018-07-06T18:24:00.000Z"
                          title="2018-07-06T18:24:00.000Z"
                        >
                          2018-07-06T18:24:00.000Z
                        </time>
                      </button>
                    </div>
                  </div>
                  <div
                    className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                    >
                      <button
                        className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantText Button-uppercase coral coral-comment-editButton CommentContainer-editButton"
                        data-testid="comment-edit-button"
                        data-variant="text"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <div
                          className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
                        >
                          <i
                            aria-hidden="true"
                            className="Icon-root Icon-sm coral coral-icon CommentContainer-editIcon"
                          >
                            edit
                          </i>
                          Edit
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  className="Comment-subBar"
                >
                  <button
                    className="BaseButton-root InReplyTo-button"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root coral coral-comment-inReplyTo Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon InReplyTo-icon"
                      >
                        reply
                      </i>
                      <span>
                         
                      </span>
                      <span
                        className="InReplyTo-inReplyTo coral coral-comment-inReplyToText"
                      >
                        In reply to 
                        <span
                          className="InReplyTo-username coral coral-comment-inReplyToUsername"
                        >
                          Markus
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
                >
                  <div
                    className="HTMLContent-root coral coral-content coral-comment-content"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<b>Hello world!</b>",
                      }
                    }
                  />
                  <div
                    className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
                  >
                    <div
                      className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                    >
                      <button
                        aria-label="Respect comment by Markus"
                        aria-pressed={false}
                        className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                        data-testid="comment-reaction-button"
                        data-variant="flat"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span
                          className="Box-root Flex-root Flex-flex Flex-alignCenter"
                        >
                          <i
                            aria-hidden="true"
                            className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                          >
                            thumb_up
                          </i>
                        </span>
                      </button>
                      <button
                        aria-label="Reply to comment by Markus"
                        aria-pressed={false}
                        className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                        data-testid="comment-reply-button"
                        data-variant="flat"
                        disabled={false}
                        id="comments-commentContainer-replyButton-uuid-0"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span
                          className="Box-root Flex-root Flex-flex Flex-alignCenter"
                        >
                          <i
                            aria-hidden="true"
                            className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                          >
                            reply
                          </i>
                        </span>
                      </button>
                      <div
                        className="Popover-root"
                      >
                        <button
                          aria-controls="permalink-popover-uuid-0"
                          aria-label="Share comment by Markus"
                          aria-pressed={false}
                          className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                          data-variant="flat"
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          type="button"
                        >
                          <span
                            className="Box-root Flex-root Flex-flex Flex-alignCenter"
                          >
                            <i
                              aria-hidden="true"
                              className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                            >
                              share
                            </i>
                          </span>
                        </button>
                        <div
                          aria-hidden={true}
                          aria-label="A dialog showing a permalink to the comment"
                          id="permalink-popover-uuid-0"
                          role="dialog"
                        />
                      </div>
                    </div>
                    <div
                      className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                    >
                      <button
                        aria-label="Report comment by Markus"
                        aria-pressed={false}
                        className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                        data-testid="comment-report-button"
                        data-variant="flat"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span
                          className="Box-root Flex-root Flex-flex Flex-alignCenter"
                        >
                          <i
                            aria-hidden="true"
                            className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                          >
                            flag
                          </i>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className=""
    />
  </div>
</div>
`;
